--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="is-preload is-menu-visible">
-
+<body class="is-menu-visible">
+	
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -113,10 +113,10 @@
 		<section>
 			<section class="wrapper style2">
 				<div class="inner">
-					<h2 class="major servicio">Servicios de vuelos privados</h2>
+					<h2 class="major servicio fade-in">Servicios de vuelos privados</h2>
 				</div>
 				<div id="servicios" class="inner tipos servi">
-					<article>
+					<article class="fade-in">
 						<a class="image"><img src="img/Vuelos_Privados.png" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Privados</h2>
@@ -127,7 +127,7 @@
 								siempre cuidará hasta el más mínimo detalle de tu experiencia.</p>
 						</div>
 					</article>
-					<article>
+					<article class="fade-in">
 						<a class="image"><img src="img/Vuelos_Charter.png" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Charter</h2>
@@ -138,7 +138,7 @@
 								dedicada a brindarte a ti y tus invitados la mejor atención.</p>
 						</div>
 					</article>
-					<article>
+					<article class="fade-in">
 						<a class="image"><img src="img/Vuelos_Helitour.png" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Helitour</h2>
@@ -153,8 +153,8 @@
 			<!-- AVIONES -->
 			<section class="wrapper avi">
 				<div class="inner">
-					<h2 class="major">Aviones privados</h2>
-					<p>Explora nuestra selección de <strong>aviones privados</strong>, desde el <strong>Gulfstream
+					<h2 class="major fade-in">Aviones privados</h2>
+					<p class="fade-in">Explora nuestra selección de <strong>aviones privados</strong>, desde el <strong>Gulfstream
 							5</strong> hasta el <strong>Learjet 60</strong>. <strong>Confort</strong>,
 						<strong>lujo</strong> y <strong>rendimiento</strong> incomparables en cada vuelo. Equipados con
 						lo último en tecnología y comodidades para una experiencia de vuelo única. ¡Viaja con nosotros y
@@ -162,52 +162,52 @@
 
 					<section id="aviones" class="tipos avion">
 
-						<article data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
+						<article class="fade-in" data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Gulfstream 5</h3>
 						</article>
 
-						<article data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
+						<article class="fade-in" data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Challenger 600</h3>
 						</article>
 
-						<article data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
+						<article class="fade-in" data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 60</h3>
 						</article>
 
-						<article data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
+						<article class="fade-in" data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 45</h3>
 						</article>
 
-						<article data-id="5" data-title="Avion 5" data-description="Descripción del Avion 5">
+						<article class="fade-in" data-id="5" data-title="Avion 5" data-description="Descripción del Avion 5">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 35</h3>
 						</article>
 
-						<article data-id="6" data-title="Avion 6" data-description="Descripción del Avion 6">
+						<article class="fade-in" data-id="6" data-title="Avion 6" data-description="Descripción del Avion 6">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Cessna citation III</h3>
 						</article>
 
-						<article data-id="7" data-title="Avion 7" data-description="Descripción del Avion 7">
+						<article class="fade-in" data-id="7" data-title="Avion 7" data-description="Descripción del Avion 7">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>King air 200</h3>
 						</article>
 
-						<article data-id="8" data-title="Avion 8" data-description="Descripción del Avion 8">
+						<article class="fade-in" data-id="8" data-title="Avion 8" data-description="Descripción del Avion 8">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>King air 90</h3>
 						</article>
 
-						<article data-id="9" data-title="Avion 9" data-description="Descripción del Avion 9">
+						<article class="fade-in" data-id="9" data-title="Avion 9" data-description="Descripción del Avion 9">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Fairchild Metroliner III</h3>
 						</article>
 
-						<article data-id="10" data-title="Avion 10" data-description="Descripción del Avion 10">
+						<article class="fade-in" data-id="10" data-title="Avion 10" data-description="Descripción del Avion 10">
 							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Navajo 350</h3>
 						</article>
@@ -230,11 +230,11 @@
 
 			<section id="nosotros" class="wrapper style2 align-center">
 				<div class="inner">
-					<h2 class="major">Nosotros</h2>
+					<h2 class="major fade-in">Nosotros</h2>
 				</div>
 				<div class="inner">
 					<div>
-						<p class="descripcionNosotros">Bienvenidos a <strong>BairesJet</strong>, líderes en la
+						<p class="descripcionNosotros fade-in">Bienvenidos a <strong>BairesJet</strong>, líderes en la
 							prestigiosa industria de vuelos privados y charters en
 							Buenos Aires, Argentina. Nos distingue la <strong>excelencia</strong> y la dedicación en
 							proporcionar
