--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logoyMenu">
-				<a href="index.html"><img src="img/bairesjetlogo.png" alt="Logo"></a>
+				<a href="index.html"><img src="img/recursos/bairesjetlogo.png" alt="Logo"></a>
 				<div id="menuToggle">
 					<i class="fas fa-bars"></i>
 				</div>
@@ -53,7 +53,7 @@
 
 
 		<!-- Banner -->
-		<section id="banner" style="background-image: url('img/fondo1.jpg');">
+		<section id="banner" style="background-image: url('img/recursos/fondo1.jpg');">
 			<div class="inner">
 				<h1 class="major">Los mejores en Vuelos Privados</h1>
 				<p>Obtén cotizaciones rápidas y personalizadas para vuelos privados en Argentina.</p>
@@ -117,7 +117,7 @@
 				</div>
 				<div id="servicios" class="inner tipos servi">
 					<article class="fade-in">
-						<a class="image"><img src="img/Vuelos_Privados.png" alt="avion de vuelo privado" /></a>
+						<a class="image"><img src="img/recursos/Vuelos_Privados.png" alt="avion de vuelo privado" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Privados</h2>
 							<p>Puedes sentirte <strong>como en casa</strong> mientras viajas a tus <strong>vacaciones
@@ -128,7 +128,7 @@
 						</div>
 					</article>
 					<article class="fade-in">
-						<a class="image"><img src="img/Vuelos_Charter.png" alt="avion de vuelo privado" /></a>
+						<a class="image"><img src="img/recursos/Vuelos_Charter.png" alt="avion de vuelo charter" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Charter</h2>
 							<p><strong>Organiza viajes</strong> para <strong>grupos grandes</strong> y vive el
@@ -139,7 +139,7 @@
 						</div>
 					</article>
 					<article class="fade-in">
-						<a class="image"><img src="img/Vuelos_Helitour.png" alt="avion de vuelo privado" /></a>
+						<a class="image"><img src="img/recursos/Vuelos_Helitour.png" alt="vuelo helicoptero" /></a>
 						<div class="content">
 							<h2 class="major">Vuelos Helitour</h2>
 							<p><strong>Descubre</strong> las <strong>maravillas de la ciudad</strong> desde un nuevo
@@ -163,52 +163,52 @@
 					<section id="aviones" class="tipos avion">
 
 						<article class="fade-in" data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Gulfstream 5</h3>
 						</article>
 
 						<article class="fade-in" data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Challenger 600</h3>
 						</article>
 
 						<article class="fade-in" data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 60</h3>
 						</article>
 
 						<article class="fade-in" data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 45</h3>
 						</article>
 
 						<article class="fade-in" data-id="5" data-title="Avion 5" data-description="Descripción del Avion 5">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 35</h3>
 						</article>
 
 						<article class="fade-in" data-id="6" data-title="Avion 6" data-description="Descripción del Avion 6">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Cessna citation III</h3>
 						</article>
 
 						<article class="fade-in" data-id="7" data-title="Avion 7" data-description="Descripción del Avion 7">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>King air 200</h3>
 						</article>
 
 						<article class="fade-in" data-id="8" data-title="Avion 8" data-description="Descripción del Avion 8">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>King air 90</h3>
 						</article>
 
 						<article class="fade-in" data-id="9" data-title="Avion 9" data-description="Descripción del Avion 9">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Fairchild Metroliner III</h3>
 						</article>
 
 						<article class="fade-in" data-id="10" data-title="Avion 10" data-description="Descripción del Avion 10">
-							<a href="#" class="image"><img src="img/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Navajo 350</h3>
 						</article>
 
