--- a/index.html
+++ b/index.html
@@ -163,47 +163,47 @@
 					<section id="aviones" class="tipos avion">
 
 						<article class="fade-in" data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Gulfstream 5/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>Gulfstream 5</h3>
 						</article>
 
 						<article class="fade-in" data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Challenger 600/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>Challenger 600</h3>
 						</article>
 
 						<article class="fade-in" data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Learjet 60/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 60</h3>
 						</article>
 
 						<article class="fade-in" data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Learjet 45/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 45</h3>
 						</article>
 
 						<article class="fade-in" data-id="5" data-title="Avion 5" data-description="Descripción del Avion 5">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Learjet 35/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>Learjet 35</h3>
 						</article>
 
 						<article class="fade-in" data-id="6" data-title="Avion 6" data-description="Descripción del Avion 6">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Cessna Citation III/postada.png" alt="avion de vuelo privado" /></a>
 							<h3>Cessna citation III</h3>
 						</article>
 
 						<article class="fade-in" data-id="7" data-title="Avion 7" data-description="Descripción del Avion 7">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/King air 200/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>King air 200</h3>
 						</article>
 
 						<article class="fade-in" data-id="8" data-title="Avion 8" data-description="Descripción del Avion 8">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/King air 90/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>King air 90</h3>
 						</article>
 
 						<article class="fade-in" data-id="9" data-title="Avion 9" data-description="Descripción del Avion 9">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Fairchild Metroliner III/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>Fairchild Metroliner III</h3>
 						</article>
 
