--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Vuelos privados Argentina, vuelos charter Argentina, taxi aéreo Argentina, vuelos ejecutivos Argentina,
-		alquiler aviones Argentina</title>
+	<title>Vuelos privados en Argentina, vuelos charter, taxi aéreo y ejecutivos | Baires Jet</title>
 	<meta name="description"
-		content="Taxi aéreo, vuelos charter, vuelos privados, vuelos ejecutivos, alquiler de aviones, vuelos de bautismo, paseos en avión, servicios aéreos, destinos y tarifas.">
+		content="Taxi aéreo, vuelos charter, vuelos privados, vuelos ejecutivos, renta de aviones, vuelos de bautismo, paseos en avión, servicios aéreos, destinos y tarifas en Argentina.">
 	<meta name="keywords"
-		content="vuelos privados, vuelos charter, taxi aereo, vuelos ejecutivos, vuelos sanitarios, alquiler aviones, alquiler jet, jet charter, jets privados, aviones charter, aviones privados, aviones ejecutivos, servicios aereos, traslados aereos, transporte aereo, paseos avion, paseos helicoptero, vuelos bautismo, vuelos martin garcia, vuelos estancias, bautismo avion, bautismo helicoptero, sobrevuelos avion, excursiones aereas, tours avion, tours helicoptero, vuelos panoramicos, tarifas vuelos, vuelos argentina, vuelos uruguay, vuelos punta del este, vuelos montevideo">
+		content="jets privados, vuelos privados, avion privado precio, jets privados, vuelo privado, precio jet privado, renta de aviones privados, renta de jet privado, vuelos privados precios, renta avion privado, vuelos privados baratos, renta jet privado, renta de jet privado precio, vuelos en jet privado, precio de un jet privado, viajes privados en avion, viajes en jet privado, charter privado, vuelos jet, precio de aviones privados, vuelos ejecutivos, vuelo jet privado, jet privado vuelos, renta de avioneta privada, renta de jet privados, avion jet privado, aviones de lujo privados, aviones jet privados, aviones jets privados, helicoptero privado precio, vuelo jet">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="Baires Jet">
@@ -55,10 +54,11 @@
 		<!-- Banner -->
 		<section id="banner" style="background-image: url('img/recursos/fondo1.jpg');">
 			<div class="inner">
-				<h1 class="major">Los mejores en Vuelos Privados</h1>
-				<p>Obtén cotizaciones rápidas y personalizadas para vuelos privados en Argentina.</p>
+				<h1 class="major">Disfruta la Exclusividad de los Vuelos Privados</h1>
+				<p>¡Obtén cotizaciones rápidas y personalizadas para tu viaje de lujo!</p>
 			</div>
 		</section>
+		
 
 
 		<section id="form">
@@ -188,7 +188,7 @@
 						</article>
 
 						<article class="fade-in" data-id="6" data-title="Avion 6" data-description="Descripción del Avion 6">
-							<a href="#" class="image"><img src="img/Cessna Citation III/postada.png" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/Cessna Citation III/portada.png" alt="avion de vuelo privado" /></a>
 							<h3>Cessna citation III</h3>
 						</article>
 
@@ -208,7 +208,7 @@
 						</article>
 
 						<article class="fade-in" data-id="10" data-title="Avion 10" data-description="Descripción del Avion 10">
-							<a href="#" class="image"><img src="img/recursos/ejemplo.jpg" alt="avion de vuelo privado" /></a>
+							<a href="#" class="image"><img src="img/recursos/portada.jpg" alt="avion de vuelo privado" /></a>
 							<h3>Navajo 350</h3>
 						</article>
 
@@ -234,26 +234,12 @@
 				</div>
 				<div class="inner">
 					<div>
-						<p class="descripcionNosotros fade-in">Bienvenidos a <strong>BairesJet</strong>, líderes en la
-							prestigiosa industria de vuelos privados y charters en
-							Buenos Aires, Argentina. Nos distingue la <strong>excelencia</strong> y la dedicación en
-							proporcionar
-							experiencias exclusivas. Como miembros de <strong>ARGUS</strong>, garantizamos estándares de
-							<strong>seguridad</strong> y
-							<strong>calidad</strong> superiores. Con una flota diversificada que incluye aeronaves
-							<strong>turbohélices</strong>, <strong>jets</strong> y
-							helicópteros, ofrecemos soluciones de transporte personalizadas que satisfacen las más
-							exigentes necesidades. Además, nuestras aeronaves están diseñadas para adaptarse a
-							diferentes tipos de pistas, asegurando la máxima <strong>flexibilidad</strong> en sus
-							viajes. Confíe en
-							<strong>BairesJet</strong> para vuelos nacionales e internacionales, donde la
-							<strong>seguridad</strong>, la <strong>elegancia</strong> y la
-							<strong>eficiencia</strong> convergen.
-						</p>
+						<p class="descripcionNosotros fade-in">Bienvenidos a BairesJet, líderes en la industria de <strong>renta de jets privados</strong> y <strong>charters</strong> en Buenos Aires, Argentina. Nos destacamos por ofrecer <strong>vuelos ejecutivos</strong> y <strong>vuelos privados de lujo</strong>. Nuestro compromiso con la excelencia y la seguridad nos ha llevado a ser miembros certificados de ARGUS, asegurando estándares superiores en cada <strong>vuelo</strong>. Contamos con una amplia flota que incluye <strong>jets privados</strong>, aviones de lujo y helicópteros, brindando soluciones de transporte personalizadas para satisfacer todas sus necesidades. Nuestras aeronaves están diseñadas para adaptarse a diferentes tipos de pistas, garantizando la máxima flexibilidad en sus <strong>viajes</strong>. Confíe en BairesJet para la <strong>renta de jets privados</strong>, <strong>vuelos privados</strong> nacionales e internacionales, donde la seguridad, la elegancia y la eficiencia se unen para ofrecerle una experiencia exclusiva y sin igual</p>
 
 					</div>
 				</div>
 			</section>
+
 
 
 		</section>
