--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body class="is-menu-visible">
-	
+
 	<!-- Page Wrapper -->
 	<div id="page-wrapper">
 
@@ -58,14 +58,14 @@
 				<p>¡Obtén cotizaciones rápidas y personalizadas para tu viaje de lujo!</p>
 			</div>
 		</section>
-		
+
 
 
 		<section id="form">
 			<div class="inner">
 				<h2 class="major">Cotiza por mail</h2>
 				<div class="form-contact-wrapper">
-					<form method="post" action="#">
+					<form action="https://formsubmit.co/general@bairesjet.com" method="POST">
 						<div class="fields">
 							<div class="column">
 								<div class="field">
@@ -89,7 +89,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="field tipoNave"> 
+						<div class="field tipoNave">
 							<div class="aeronave">
 								<label for="aircraftType">Tipo de Aeronave</label>
 								<select name="aircraftType" id="aircraftType">
@@ -103,10 +103,14 @@
 						<div class="actions">
 							<button type="submit" value="Send Message" class="button">enviar</button>
 						</div>
+						<input type="hidden" name="_next" value="www.bairesjet.com">
+						<input type="hidden" name="_captcha" value="false">
 					</form>
 				</div>
 			</div>
 		</section>
+
+
 
 
 		<!-- SERVICIOS -->
@@ -124,7 +128,8 @@
 									familiares</strong> o te preparas para tu próximo éxito
 								<strong>profesional</strong>. Vive nuestros <strong>aviones</strong> como
 								<strong>tuyos</strong> con el respaldado por nuestra <strong>tripulación</strong>, que
-								siempre cuidará hasta el más mínimo detalle de tu experiencia.</p>
+								siempre cuidará hasta el más mínimo detalle de tu experiencia.
+							</p>
 						</div>
 					</article>
 					<article class="fade-in">
@@ -135,7 +140,8 @@
 								<strong>confort</strong>, <strong>exclusividad</strong> y <strong>seguridad</strong> de
 								un vuelo de <strong>primer nivel</strong>. Cuenta con <strong>servicios
 									personalizados</strong> y déjate sorprender por una <strong>tripulación</strong>
-								dedicada a brindarte a ti y tus invitados la mejor atención.</p>
+								dedicada a brindarte a ti y tus invitados la mejor atención.
+							</p>
 						</div>
 					</article>
 					<article class="fade-in">
@@ -144,7 +150,8 @@
 							<h2 class="major">Vuelos Helitour</h2>
 							<p><strong>Descubre</strong> las <strong>maravillas de la ciudad</strong> desde un nuevo
 								ángulo y disfruta un <strong>panorama incomparable</strong> desde las alturas con este
-								<strong>City Tour en helicóptero</strong>.</p>
+								<strong>City Tour en helicóptero</strong>.
+							</p>
 						</div>
 					</article>
 				</div>
@@ -154,61 +161,90 @@
 			<section class="wrapper avi">
 				<div class="inner">
 					<h2 class="major fade-in">Aviones privados</h2>
-					<p class="fade-in">Explora nuestra selección de <strong>aviones privados</strong>, desde el <strong>Gulfstream
+					<p class="fade-in">Explora nuestra selección de <strong>aviones privados</strong>, desde el
+						<strong>Gulfstream
 							5</strong> hasta el <strong>Learjet 60</strong>. <strong>Confort</strong>,
 						<strong>lujo</strong> y <strong>rendimiento</strong> incomparables en cada vuelo. Equipados con
 						lo último en tecnología y comodidades para una experiencia de vuelo única. ¡Viaja con nosotros y
-						descubre el <strong>lujo</strong> en el aire!</p>
+						descubre el <strong>lujo</strong> en el aire!
+					</p>
 
 					<section id="aviones" class="tipos avion">
 
-						<article class="fade-in" data-id="1" data-title="Avion 1" data-description="Descripción del Avion 1">
-							<a href="#" class="image"><img src="img/Gulfstream 5/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="1" data-title="Avion 1"
+							data-description="Descripción del Avion 1">
+							<a href="#" class="image"><img src="img/Gulfstream 5/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>Gulfstream 5</h3>
 						</article>
 
-						<article class="fade-in" data-id="2" data-title="Avion 2" data-description="Descripción del Avion 2">
-							<a href="#" class="image"><img src="img/Challenger 600/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="2" data-title="Avion 2"
+							data-description="Descripción del Avion 2">
+							<a href="#" class="image"><img src="img/Challenger 600/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>Challenger 600</h3>
 						</article>
 
-						<article class="fade-in" data-id="3" data-title="Avion 3" data-description="Descripción del Avion 3">
-							<a href="#" class="image"><img src="img/Learjet 60/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="3" data-title="Avion 3"
+							data-description="Descripción del Avion 3">
+							<a href="#" class="image"><img src="img/Learjet 60/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>Learjet 60</h3>
 						</article>
 
-						<article class="fade-in" data-id="4" data-title="Avion 4" data-description="Descripción del Avion 4">
-							<a href="#" class="image"><img src="img/Learjet 45/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="4" data-title="Avion 4"
+							data-description="Descripción del Avion 4">
+							<a href="#" class="image"><img src="img/Learjet 45/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>Learjet 45</h3>
 						</article>
 
-						<article class="fade-in" data-id="5" data-title="Avion 5" data-description="Descripción del Avion 5">
-							<a href="#" class="image"><img src="img/Learjet 35/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="5" data-title="Avion 5"
+							data-description="Descripción del Avion 5">
+							<a href="#" class="image"><img src="img/Learjet 35/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>Learjet 35</h3>
 						</article>
 
-						<article class="fade-in" data-id="6" data-title="Avion 6" data-description="Descripción del Avion 6">
-							<a href="#" class="image"><img src="img/Cessna Citation III/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="6" data-title="Avion 6"
+							data-description="Descripción del Avion 6">
+							<a href="#" class="image"><img src="img/Learjet 31/portada.png"
+									alt="avion de vuelo privado" /></a>
+							<h3>Learjet 31</h3>
+						</article>
+
+						<article class="fade-in" data-id="7" data-title="Avion 7"
+							data-description="Descripción del Avion 6">
+							<a href="#" class="image"><img src="img/Cessna Citation III/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>Cessna citation III</h3>
 						</article>
 
-						<article class="fade-in" data-id="7" data-title="Avion 7" data-description="Descripción del Avion 7">
-							<a href="#" class="image"><img src="img/King air 200/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="8" data-title="Avion 8"
+							data-description="Descripción del Avion 7">
+							<a href="#" class="image"><img src="img/King air 200/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>King air 200</h3>
 						</article>
 
-						<article class="fade-in" data-id="8" data-title="Avion 8" data-description="Descripción del Avion 8">
-							<a href="#" class="image"><img src="img/King air 90/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="9" data-title="Avion 9"
+							data-description="Descripción del Avion 8">
+							<a href="#" class="image"><img src="img/King air 90/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>King air 90</h3>
 						</article>
 
-						<article class="fade-in" data-id="9" data-title="Avion 9" data-description="Descripción del Avion 9">
-							<a href="#" class="image"><img src="img/Fairchild Metroliner III/portada.png" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="10" data-title="Avion 10"
+							data-description="Descripción del Avion 9">
+							<a href="#" class="image"><img src="img/Fairchild Metroliner III/portada.png"
+									alt="avion de vuelo privado" /></a>
 							<h3>Fairchild Metroliner III</h3>
 						</article>
 
-						<article class="fade-in" data-id="10" data-title="Avion 10" data-description="Descripción del Avion 10">
-							<a href="#" class="image"><img src="img/recursos/portada.jpg" alt="avion de vuelo privado" /></a>
+						<article class="fade-in" data-id="11" data-title="Avion 11"
+							data-description="Descripción del Avion 10">
+							<a href="#" class="image"><img src="img/recursos/portada.jpg"
+									alt="avion de vuelo privado" /></a>
 							<h3>Navajo 350</h3>
 						</article>
 
@@ -234,7 +270,20 @@
 				</div>
 				<div class="inner">
 					<div>
-						<p class="descripcionNosotros fade-in">Bienvenidos a BairesJet, líderes en la industria de <strong>renta de jets privados</strong> y <strong>charters</strong> en Buenos Aires, Argentina. Nos destacamos por ofrecer <strong>vuelos ejecutivos</strong> y <strong>vuelos privados de lujo</strong>. Nuestro compromiso con la excelencia y la seguridad nos ha llevado a ser miembros certificados de ARGUS, asegurando estándares superiores en cada <strong>vuelo</strong>. Contamos con una amplia flota que incluye <strong>jets privados</strong>, aviones de lujo y helicópteros, brindando soluciones de transporte personalizadas para satisfacer todas sus necesidades. Nuestras aeronaves están diseñadas para adaptarse a diferentes tipos de pistas, garantizando la máxima flexibilidad en sus <strong>viajes</strong>. Confíe en BairesJet para la <strong>renta de jets privados</strong>, <strong>vuelos privados</strong> nacionales e internacionales, donde la seguridad, la elegancia y la eficiencia se unen para ofrecerle una experiencia exclusiva y sin igual</p>
+						<p class="descripcionNosotros fade-in">Bienvenidos a BairesJet, líderes en la industria de
+							<strong>renta de jets privados</strong> y <strong>charters</strong> en Buenos Aires,
+							Argentina. Nos destacamos por ofrecer <strong>vuelos ejecutivos</strong> y <strong>vuelos
+								privados de lujo</strong>. Nuestro compromiso con la excelencia y la seguridad nos ha
+							llevado a ser miembros certificados de ARGUS, asegurando estándares superiores en cada
+							<strong>vuelo</strong>. Contamos con una amplia flota que incluye <strong>jets
+								privados</strong>, aviones de lujo y helicópteros, brindando soluciones de transporte
+							personalizadas para satisfacer todas sus necesidades. Nuestras aeronaves están diseñadas
+							para adaptarse a diferentes tipos de pistas, garantizando la máxima flexibilidad en sus
+							<strong>viajes</strong>. Confíe en BairesJet para la <strong>renta de jets
+								privados</strong>, <strong>vuelos privados</strong> nacionales e internacionales, donde
+							la seguridad, la elegancia y la eficiencia se unen para ofrecerle una experiencia exclusiva
+							y sin igual
+						</p>
 
 					</div>
 				</div>
@@ -264,8 +313,8 @@
 		<div id="contenedorBoton">
 			<span id="textoBoton"><strong>Cotiza<br>rápido</strong></span>
 			<i id="botonFlotante" class="fab fa-whatsapp"></i>
-		  </div>
-		  
+		</div>
+
 
 
 	</div>
