--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="distribution" content="global">
 
 	<!-- Favicon -->
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/img/recursos/minilogo.png">
 
 	<!-- Estilos y fuentes -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
@@ -33,7 +33,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logoyMenu">
-				<a href="index.html"><img src="img/recursos/bairesjetlogo.png" alt="Logo"></a>
+				<a href=""><img src="img/recursos/bairesjetlogo.png" alt="Logo"></a>
 				<div id="menuToggle">
 					<i class="fas fa-bars"></i>
 				</div>
@@ -102,10 +102,10 @@
 				  <div class="actions">
 					<button type="submit" value="Send Message" class="button">enviar</button>
 				</div>
-				<div id="confirmationMessage" style="display: block;">
+				<div id="confirmationMessage" style="display:none;">
 				  <p>Su mensaje ha sido enviado correctamente.</p>
 				</div>
-				  <input type="hidden" name="_next" value="www.bairesjet.com">
+				  <input type="hidden" name="_next" value="https://bairesjet.com">
 				  <input type="hidden" name="_captcha" value="false">
 				</form>
 			  </div>
@@ -241,14 +241,14 @@
 									alt="avion de vuelo privado" /></a>
 							<h3>Fairchild Metroliner III</h3>
 						</article>
-
+<!--
 						<article class="fade-in" data-id="11" data-title="Avion 11"
 							data-description="Descripción del Avion 10">
 							<a href="#" class="image"><img src="img/recursos/portada.jpg"
 									alt="avion de vuelo privado" /></a>
 							<h3>Navajo 350</h3>
 						</article>
-
+-->
 					</section>
 
 				</div>
@@ -300,12 +300,14 @@
 			<div class="style3">
 				<h2 class="align-center">Contacto</h2>
 				<div class="redes-sociales">
-					<a href="https://www.instagram.com/tu_cuenta" target="_blank" class="social-icon"><i
+					<a href="https://www.instagram.com/bairesjet?igsh=MTA0cHRmc3BubDQybA==" target="_blank" class="social-icon"><i
 							class="fab fa-instagram"></i></a>
-					<a href="https://www.linkedin.com/in/tu_cuenta" target="_blank" class="social-icon"><i
+					<a href="https://www.linkedin.com/company/baires-jet/" target="_blank" class="social-icon"><i
 							class="fab fa-linkedin"></i></a>
-					<a href="https://twitter.com/tu_cuenta" target="_blank" class="social-icon"><i
+<!--
+							<a href="https://twitter.com/tu_cuenta" target="_blank" class="social-icon"><i
 							class="fab fa-twitter"></i></a>
+							-->
 				</div>
 
 			</div>
